{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 20,
  "lineage": "de6a5122-ecc6-3962-5500-0c8497512168",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:internet-gateway/igw-07fa3b7f2224ef866",
            "id": "igw-07fa3b7f2224ef866",
            "owner_id": "866934333672",
            "tags": {
              "Name": "exam-igw"
            },
            "tags_all": {
              "Name": "exam-igw"
            },
            "vpc_id": "vpc-093f69f478d30cd0b"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:route-table/rtb-07fcf1b1e6a181103",
            "id": "rtb-07fcf1b1e6a181103",
            "owner_id": "866934333672",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fa3b7f2224ef866",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "exam-route-table"
            },
            "tags_all": {
              "Name": "exam-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-093f69f478d30cd0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a5d9c2811d59a08",
            "route_table_id": "rtb-07fcf1b1e6a181103",
            "subnet_id": "subnet-0d218c7453a0b4ed5"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnet",
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ac9c7343a325488",
            "route_table_id": "rtb-07fcf1b1e6a181103",
            "subnet_id": "subnet-07b4da8558caddde7"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_route_table",
            "aws_subnet.eks_subnet",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:security-group/sg-0bdeca275d11163c3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bdeca275d11163c3",
            "ingress": [],
            "name": "terraform-20250618124436916600000005",
            "name_prefix": "terraform-",
            "owner_id": "866934333672",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "exam-cluster-sg"
            },
            "tags_all": {
              "Name": "exam-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-093f69f478d30cd0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:security-group/sg-05dba5c4a9a5e62fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05dba5c4a9a5e62fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250618124436916600000006",
            "name_prefix": "terraform-",
            "owner_id": "866934333672",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "exam-node-sg"
            },
            "tags_all": {
              "Name": "exam-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-093f69f478d30cd0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:subnet/subnet-0d218c7453a0b4ed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d218c7453a0b4ed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866934333672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exam-subnet-0"
            },
            "tags_all": {
              "Name": "exam-subnet-0"
            },
            "vpc_id": "vpc-093f69f478d30cd0b"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:subnet/subnet-07b4da8558caddde7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b4da8558caddde7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866934333672",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "exam-subnet-1"
            },
            "tags_all": {
              "Name": "exam-subnet-1"
            },
            "vpc_id": "vpc-093f69f478d30cd0b"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:866934333672:vpc/vpc-093f69f478d30cd0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0539043ce8dcae932",
            "default_route_table_id": "rtb-0309ada70054e4a95",
            "default_security_group_id": "sg-0fe28a940ea7657b3",
            "dhcp_options_id": "dopt-01847259dc9a6dec5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093f69f478d30cd0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0309ada70054e4a95",
            "owner_id": "866934333672",
            "tags": {
              "Name": "exam-vpc"
            },
            "tags_all": {
              "Name": "exam-vpc"
            }
          }
        }
      ]
    }
  ]
}